--- a/assets_css/mesaje.css
+++ b/assets_css/mesaje.css
@@ -43,6 +43,14 @@
     background: #f6cf49;
 }
 
+.chat-bubble .timestamp {
+    display: block;
+    text-align: right;
+    font-size: 0.75em;
+    opacity: 0.7;
+    margin-top: 4px;
+}
+
 .chat-input {
     display: flex;
     margin-top: 8px;
