--- a/changeslots/slot-panel.css
+++ b/changeslots/slot-panel.css
@@ -1,12 +1,29 @@
+#slot-panel-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#slot-panel-overlay.active {
+    display: flex;
+}
+
 #cs-slot-panel {
     width: 100%;
     height: 100%;
-    background: url('../img/bg.png') no-repeat center/cover;
+    background: url('../img/bg2.png') no-repeat center/cover;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
 }
 #cs-slot-image {
     max-width: 80%;
