--- a/changeslots/slot-panel.css
+++ b/changeslots/slot-panel.css
@@ -16,14 +16,18 @@
 }
 
 #cs-slot-panel {
-    width: 100%;
-    height: 100%;
-    background: url('../img/bg2.png') no-repeat center/cover;
+    width: 400px;
+    height: 470px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+
+    background-image: url("../img/img2.png");
+    background-size: cover;      /* acoperă complet panoul */
+    background-position: center; /* centrează imaginea */
+    background-repeat: no-repeat;/* nu repeta imaginea */
 }
 #cs-slot-image {
     max-width: 80%;
