--- a/assets_css/welcome.css
+++ b/assets_css/welcome.css
@@ -1,3 +1,4 @@
 @import url('mini-profile.css');
 @import url('farm-slots.css');
 @import url('../changeslots/slot-panel.css');
+@import url('../quickshop/quickshop.css');
