--- a/defaultslots/defaultslots.css
+++ b/defaultslots/defaultslots.css
@@ -10,23 +10,17 @@
     width: 80px;
     height: 80px;
     border: 2px solid #999;
-    background: #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-}
-
-.ds-slot.open {
-    background: #a8d08d;
 }
 
 .ds-slot.active {
     border-color: #ff0;
 }
 
-.ds-slot.locked {
-    background: #666;
+.slot-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .ds-overlay {
@@ -41,4 +35,12 @@
     justify-content: center;
     color: #fff;
     font-weight: bold;
+}
+
+.ds-sale {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
 }
