--- a/slotstype/slotstype.css
+++ b/slotstype/slotstype.css
@@ -45,3 +45,10 @@
     font-size: 14px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
+.st-slotstype-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
